fix: #WB-2504, add correct tooltip spacings (#46)

--- a/packages/bootstrap/scss/abstracts/_variables.scss
+++ b/packages/bootstrap/scss/abstracts/_variables.scss
@@ -318,8 +318,8 @@ $nav-tabs-link-active-bg: $white !default;
 $nav-tabs-link-active-color: $gray-600 !default;
 
 /* Tooltip */
-$tooltip-padding-y: 1.2rem !default;
-$tooltip-padding-x: 1.2rem !default;
+$tooltip-padding-y: $spacer-8 !default;
+$tooltip-padding-x: $spacer-8 !default;
 $tooltip-arrow-width: 1.6rem !default;
 $tooltip-arrow-height: 0.8rem !default;
 $tooltip-opacity: 0.8 !default;
